Symfony First Integrations
	+ WordController
	+ Front-end twig page for word forms
	+ Entity ImagePath & SoundPath
	+ Entity Word

--- a/SymfonyWWW/app/Resources/views/base.html.twig
+++ b/SymfonyWWW/app/Resources/views/base.html.twig
@@ -29,7 +29,7 @@
                     <div class="container">
                         <div class="navbar-header">
                             <a class="navbar-brand" href="{{ path('homepage') }}">
-                                Symfony Demo
+                                XPrize - Global Learning
                             </a>
 
                             <button type="button" class="navbar-toggle"
